app/frontend/stylesheets/all_pages.scss
a{
  text-decoration: none !important;
  background-color: unset !important;
}
//new item
.new-item-page{
  // display: flex;
  background-color: white;
  width: 100%;
  height: 550px;
  padding: 20px;
  border-radius: 10px;
  margin-right: 20px;
  border: solid 1px rgb(192, 180, 180);
  box-shadow: 12px 12px 7px rgba(0, 0, 0, 0.2);
  margin-bottom: 100px;
  z-index: 10000;
}
.item-wrap{
  display: flex;
  font-family: "Helvetica", "Arial","LiHei Pro","黑體-繁","微軟正黑體", sans-serif;

  .advertising{
    // position: relative;
    width: 50%;
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    // border: solid 1px red;
    
    h2{
      font-size: 25px;
      margin-bottom: 40px;
    }
    .advertising-article{
      width: 450px;
      display: flex;
      // border: solid 1px red;

    }
    .img{
      // position: absolute;
      width: 200px;
      // right: 0;
      // bottom: 0;
      
      img{
        width: 100%;
        border-radius: 10px;
      }
    }
  }
  
}
.new-item-title{
    margin-bottom: 30px;
    display: flex;
    // justify-content: center;
}

.new-item-title{
    font-size: 30px;
    color: rgb(82, 77, 77);
    height: 20px;
}
.item-object-group{
  width: 45%;
  margin-left: 50px;
  padding-left: 20px;
  border-right: solid #aaa 1px;
  // padding-left: 80px;
  box-sizing: border-box;
  // border: solid red 1px;
}
.item-body{
    display: flex;
    margin: 10px 0px;
    align-items: center;
    color: rgb(98, 92, 92);
    .check-box-tag{
        margin-right: 10px;
    }
    .new-item-input{
        line-height: 25px;
        width: 150px;
        outline: none;
    }
}
.item-label{
    font-size: 20px;
    margin-right: 10px;
    color: rgb(98, 92, 92);
    font-weight: 500;
}
.assign-label{
    // margin: 100px;
    .assign-init{
        margin: 5px 0px;
        text-align: center;
        outline: none;
    }
}
.border-radius{
  border-radius: 10px;
}
#item_status{
  border-radius: 10px;
}
.item-btn{
  margin-left: 150px;
}
.new-item-submit{
  width: 100px;
  height: 30px;
  padding: 3px;
  font-size: 18px;
  background-color: rgb(69, 175, 69);
  color: white;
  margin: 10px;
  border-radius: 5px;
  transition: .3s;
}
.new-item-submit:hover{
  background-color: rgb(51, 42, 42);
  transition: .3s;
}
#item_status{
  outline: none;
}



// group
.group-card{
  // border: solid 1px red;
  width: 170px;
  margin-top: 70px;
  margin-left: 100px;
  .group-input{
    border-radius: 5px;
  }
}



//body
body{
  background-color: #5A815A;
  
  // padding-left: 30px;
}



// navbar 

.navbar-brand, .navbar-menu
{
  background-color: #5A815A;

  .navbar-link{
    color: white;
  }
  .navbar-end{
    a:hover{
      color: rgb(66, 20, 20);
    }
  }
  .navbar-item{
    height: 60px;
    color: white;
    font-size: 16px;
    font-weight: 500;
    // border: solid red 1px;
    // padding-left: 50px;
    .logo{
      width: 180px;
      height: 60px;
      // border: red solid 1px;
      display: flex;
      align-items: center;
      margin-left: 10px;
      img{
        width: 100%;
        height: 100%;
        // border: solid 1px blue;
      }
    }
  }
  .navbar-item{
    display: flex;
    align-items: center;
    font-family: "Helvetica", "Arial","LiHei Pro","黑體-繁","微軟正黑體", sans-serif;

    .buttons{
      margin: 0;
      margin-right: 10px;
      .sign-in-buttons{
        // border: solid red 1px;
        background-color: #EFF4EF;
        height: 0;
        width: 150px;
        position: absolute;
        top: 70px;
        left: 0px;
        overflow: hidden;
        background: rgba(255,255,255,.8);
        box-shadow: 0 2px 5px rgba(0,0,0,.3);
        margin: 0;
        padding: 0;
        transition: 0.5s;
        strong{
          a{
            display: block;
            padding: 5px 10px;
            line-height: 34px;
            font-size: 14px;
            text-align: center;
          }
        }
      }
      .sign-in-buttons-open{
        height: 88px;
        transition: 0.5s;
      }
    
    }

  }
  .sign-out-status{
    margin-top: 8px;
  }
  .sign-out-buttons{
    color: white;
  }
  
  .arrow{
    transition: 0.5s;
    transform: rotate(180deg);
  }
  .arrow_icon{
    font-size: 20px;
    transition: 0.5s;
  }
  .sign-in-name{
    color: white;
    // border: solid 1px red;
    display: flex;
    align-items: center;
    color: #ECC94B;
    margin-right: 10px;
  }
  
}







//workspace_list
.workspace-list{
  // border: solid 1px blue;
  width: 100%;
  box-shadow:none;
  // padding-left: 30px;
  // border: solid red 1px;
  
  .workspace-item{
    margin-bottom: 25px;
    display: flex;
    align-items: center;
    font-weight: 600;
    p{
      margin: 10px;
      color: #ECC94B;
      
    }
  }
  
}
.add-new-board{
  display: flex;
  color: white;
  margin-left: 30px;
  margin-bottom: 20px;
}
.board-item{
  color: white;
  margin-left: 30px;
  margin-bottom: 20px;
}
.board-link{
  color: white;
}
.fa-plus-square{
  color: white;
}
.fa-user-plus, .fa-edit, .fa-trash-alt
{
  color: white;
  margin-left: 10px;
}
.navbar-workspace{
  height: 100%;
  overflow: auto;
  background-color: #5A815A;
  // border: solid red 1px;
  padding: 0px;
}

.fa-folder{
  position: relative;
  font-size: 25px;
  bottom: 5px;
  color: #ECC94B;
  outline: none;
}
.fa-folder:hover{
  background-color: #5A815A;
}
.fa-plus-square:hover{
  background-color: #5A815A;
}





// groups-task-list

.item-group-li{
  // border: red solid 1px;
  padding-bottom: 50px;
}
.item-group-li-box{
  display: flex;
  margin-bottom: 20px;
  .item-group-li-p-title{
    font-size: 30px;
    margin-right: 10px;
    // margin-right: 10px;
  }
  .item-group-li-p-icon{

    font-size: 20px;
    color: #a6bba6;
  }
}
.task-first-lattice{
  display: flex;
  align-items: center;
  .fa-caret-right{
    font-size: 15px;
    margin-right: 5px;
    transition: 0.5s;
  }
  .arrow{
    transition: 0.5s;
    transform: rotate(180deg);
  }
  .edit-task{
    // border: 1px solid red;
    margin-right: 5px;
    width: 0px;
    overflow: hidden;
    transition: 0.5s;
  }
  .edit-task-open{
    width: 40px;
    transition: 0.5s;
  }


}

.items-task tr{
  background-color: #EFF4EF;
}

.items-task td{
    padding:0;
    background-color: #EFF4EF;
    margin: 2px 0;
}

.item-group-top-title th{
  background-color: #D3E3D3;
  
}
.item-board-left{
  border-top-left-radius: 10px;
}
.item-board-right{
  border-top-right-radius: 10px;
}
.add-item{
  background-color: #D3E3D3;
  width: 100%;
  a{
    padding-top: 4px;
  }
  
}





//main-dashboard

.main-dashboard{
  margin-right: 20px;
  margin-bottom: 100px;
  // border: red 1px solid;
}
.home-dashboard{
  border-radius: 10px;
  background-color: white;

}

.main-dashboard-title p{
  font-family: "Helvetica", "Arial","LiHei Pro","黑體-繁","微軟正黑體", sans-serif;
  font-size: 25px;
  position: relative;
  top: 50px;
  left: 0px;
  padding: 20px;
  line-height: 50px;
}

.main-dashboard-pic{
  margin-top: 100px;
  margin-left: auto;
  width: 300px;
}

.main-board{
  height: 100%;
  overflow: auto;
  background-color: white;
  border-radius: 20px;
  margin-bottom: 50px;
}
.panel{
  width: 100%;
}

.footer{
  padding: 0;
  position: absolute;
  bottom: 50px;
  left: 90px;
}
.footer-edit{
  padding: 0;
  position: absolute;
  bottom: 70px;
  left: 300px;
}


  //home
  .hero{
    background-color: white;
  }
  .main-pic{
    width: 250px;
  }


@media screen and (max-width: 768px){
  .main-pic{
    // border: solid 1px red;
    width: 500px;
  }
  .new-item-submit{
    width: 80px;
    font-size: 10px;
  }
  .item-object-group{
    width: 45%;
    margin-left: 10px;
    padding-right: 10px;
    border-right: solid #aaa 1px;
    // padding-left: 80px;
    box-sizing: border-box;
  }
  .item-label{
    font-size: 15px;
    color: rgb(98, 92, 92);
    font-weight: 500;
  }
  .item-btn{
    margin-left: 150px;
  }
  .item-wrap{
    display: flex;
    .advertising{
      width: 50%;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      margin-left: 15px;
      // border: solid 1px red;
      h2{
        font-size: 20px;
        margin-bottom: 40px;
      }
      .advertising-article{
        width: 450px;
        display: flex;
        // border: solid 1px red;
  
      }
      .img{
        // position: absolute;
        width: 200px;
        // right: 0;
        // bottom: 0;
        
        img{
          width: 100%;
          border-radius: 10px;
        }
      }
    }
    
  }
  .footer{
    padding: 0;
    position: absolute;
    bottom: 90px;
    left: 90px;
  }
  .footer-edit{
    padding: 0;
    position: absolute;
    bottom: -170px;
    left: 210px;
  }
  .footer-dashboard{
    padding: 0;
    position: absolute;
    bottom: 20px;
    left: 100px;
  }
  .group-card{
    // border: solid 1px red;
    width: 170px;
    margin-top: 70px;
    margin-left: 0px;
    .group-input{
      border-radius: 5px;
    }
  }
  
}

